--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "luke-desktop",
+  "packageManager": "pnpm@8.6.12",
   "private": true,
   "version": "0.1.0",
   "type": "module",
@@ -10,18 +11,23 @@
     "tauri": "tauri"
   },
   "dependencies": {
-    "@tauri-apps/api": "^2.1.1",
-    "@tauri-apps/plugin-shell": "^2.0.1",
+    "@anthropic-ai/sdk": "^0.56.0",
+    "@radix-ui/react-tooltip": "^1.2.7",
+    "@tauri-apps/api": "^2.6.0",
+    "@tauri-apps/plugin-dialog": "^2.3.0",
+    "@tauri-apps/plugin-shell": "^2.3.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "linguist-js": "^2.4.0",
     "lucide-react": "^0.468.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^9.0.1",
+    "react-router-dom": "^7.6.3",
     "react-syntax-highlighter": "^15.6.1",
     "remark-gfm": "^4.0.0",
-    "tailwind-merge": "^2.5.5",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
@@ -35,6 +41,6 @@
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.2.2",
-    "vite": "^5.3.1"
+    "vite": "^5.4.19"
   }
 }
